[package]
name = "docker-check"
version = "0.1.0"
authors = ["l"]
edition = "2015"

[dependencies]
dockworker = { git = "https://github.com/ragne/dockworker.git", branch="feature/healthcheck" }
#dockworker = {path = "/home/l/work/dockworker"}
log = "0.4"
fern = "0.5"
chrono = "0.4"
ctrlc = "3.1.1"
config = "0.9"
serde_derive = "^1.0.8"
serde = "^1.0.8"
# "0.0.7" 


[features]
debug = []


# The testing profile, used for `cargo test`.
[profile.test]
opt-level = 0
debug = 2
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
panic = 'unwind'
incremental = true
overflow-checks = true

# The benchmarking profile, used for `cargo bench` and `cargo test --release`.
[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false
